adding json pickle, make sure it does NOT scrape this

--- a/depth1/depth2_SHOULD_NOT_SEARCH/package.json
+++ b/depth1/depth2_SHOULD_NOT_SEARCH/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@types/npmcli__arborist": "^5.6.11"
+    "@types/npmcli__arborist": "^5.6.11",
+    "jsonpickle": "^1.1.2"
   }
 }
